--- a/GUI/public/graphic.html
+++ b/GUI/public/graphic.html
@@ -2,24 +2,22 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <title>Graphic Page</title>
-    <script src="/js/d3/d3.min.js"></script>
-    <script src="/js/struct.js"></script>
-    <script src="/js/client.js"></script>
-    <script src="/js/PageGraphic.js"></script>
-    <script src="/js/BarController.js"></script>
-    <script src="/js/Histogram.js"></script>
-    <script src="/js/BarGraph.js"></script>
-    <script src="/js/LineGraph.js"></script>
-    <script src="/js/Matrix.js"></script>
-    <script src="/session_data.js"></script>
-    <link rel="stylesheet" type="text/css" href="/css/client.css" />
+    <title>TRAiL</title>
+    <script src="js/d3/d3.min.js"></script>
+    <script src="js/struct.js"></script>
+    <script src="js/client.js"></script>
+    <script src="js/PageGraphic.js"></script>
+    <script src="js/BarController.js"></script>
+    <script src="js/Histogram.js"></script>
+    <script src="js/BarGraph.js"></script>
+    <script src="js/LineGraph.js"></script>
+    <script src="js/Matrix.js"></script>
+    <script src="session_data.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/common.css" />
+    <link rel="stylesheet" type="text/css" href="css/client.css" />
 </head>
 <body>
     <h1>Graphic Page</h1>
-    <form method="post" action="/graphic.html" style="float: right;">
-        <input type="text" name="path_csv" id="path_csv" placeholder="The path to CSV file" size="40" /><br>
-    </form>
     <div class="button" style="margin:10px;">
         <input type="button" class="button_page" id="button_statistic_page" value="Statistic Page" />
         <input type="button" class="button_page" id="button_reset_time" value="Reset Time" />
