Add upload button on view page

--- a/GUI/public/home.html
+++ b/GUI/public/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>TRAiL</title>
-    <script src="/js/home.js"></script>
+    <script src="js/home.js"></script>
     <link rel="stylesheet" type="text/css" href="css/common.css" />
     <link rel="stylesheet" type="text/css" href="css/home.css" />
 </head>
@@ -14,8 +14,8 @@
             <p>1. Select CSV File which you want to analize.</p>
             <p>
                 <label for="file_csv" class="input_file">
-                    ＋ CSV File&nbsp;
-                    <input type="file" id="file_csv" required style="display:none;" />
+                    Select CSV...
+                    <input type="file" id="file_csv" name="file_csv" required style="display:none;" />
                 </label>&nbsp;
                 <input id="path_csv" placeholder="No Selected File" disabled="disabled" class="path_file" />
             </p>
