--- a/GUI/public/statistic.html
+++ b/GUI/public/statistic.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>TRAiL</title>
     <script src="js/d3/d3.min.js"></script>
+    <script src="session_data.js"></script>
     <script src="js/struct.js"></script>
     <script src="js/client.js"></script>
     <script src="js/PageStatistic.js"></script>
@@ -11,7 +12,6 @@
     <script src="js/Histogram.js"></script>
     <script src="js/BoxGraph.js"></script>
     <script src="js/BarGraph.js"></script>
-    <script src="session_data.js"></script>
     <link rel="stylesheet" type="text/css" href="css/common.css" />
     <link rel="stylesheet" type="text/css" href="css/client.css" />
 </head>
@@ -21,6 +21,13 @@
         <input type="button" class="button_page" id="button_graphic_page" value="Graphic Page" />
         <input type="button" class="button_page" id="button_reset_time" value="Reset Time" />
         <input type="button" class="button_page" id="button_reset_view" value="Reset View" />
+        <form id="form_file" method="post" action="/upload?url_next=/statistic.html" enctype="multipart/form-data" style="float:right">
+            <label for="file_csv" class="input_file">
+                Select CSV...
+                <input type="file" id="file_csv" name="file_csv" required style="display:none;" />
+            </label>&nbsp;
+            <input id="path_csv" placeholder="No Selected File" disabled="disabled" class="path_file" />
+        </form>
     </div>
     <div id="controller"></div>
     <table border="5" width="100%" cellspacing=0>
