--- a/GUI/public/statistic.html
+++ b/GUI/public/statistic.html
@@ -18,6 +18,7 @@
 <body>
     <h1>Statistic Page</h1>
     <div class="main">
+        <input type="button" class="button_page" value="Home Page" onclick="window.location.href = '/home.html';" />
         <input type="button" class="button_page" id="button_graphic_page" value="Graphic Page" />
         <input type="button" class="button_page" id="button_reset_time" value="Reset Time" />
         <input type="button" class="button_page" id="button_reset_view" value="Reset View" />
@@ -28,7 +29,7 @@
             </label>&nbsp;
             <input id="path_csv" placeholder="No Selected File" disabled="disabled" class="path_file" />
         </form>
-        <div id="controller" class="controller"></div>
+        <div id="controller"></div>
         <table border="5" width="100%" cellspacing=0>
             <tr>
                 <td rowspan=3 width="1000px" height="700px">
