Add Graph Edit dialog On Statistic Page

--- a/GUI/public/statistic.html
+++ b/GUI/public/statistic.html
@@ -6,6 +6,7 @@
     <script src="js/d3/d3.min.js"></script>
     <script src="session_data.js"></script>
     <script src="js/struct.js"></script>
+    <script src="js/dialog.js"></script>
     <script src="js/client.js"></script>
     <script src="js/PageStatistic.js"></script>
     <script src="js/BarController.js"></script>
@@ -52,6 +53,7 @@
             </tr>
         </table>
     </div>
+    <div id="dialog" />
     <script>
         GetCSVFile("input.csv", PlotPageStatistic);
     </script>
