--- a/GUI/public/graphic.html
+++ b/GUI/public/graphic.html
@@ -6,6 +6,7 @@
     <script src="js/d3/d3.min.js"></script>
     <script src="session_data.js"></script>
     <script src="js/struct.js"></script>
+    <script src="js/dialog.js"></script>
     <script src="js/client.js"></script>
     <script src="js/PageGraphic.js"></script>
     <script src="js/BarController.js"></script>
@@ -68,6 +69,7 @@
             </tr>
         </table>
     </div>
+    <div id="dialog" />
     <script>
         GetCSVFile("input.csv", PlotPageGraphic);
     </script>
