--- a/GUI/public/home.html
+++ b/GUI/public/home.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>TRAiL</title>
+    <script src="session_data.js"></script>
+    <script src="js/common.js"></script>
     <script src="js/home.js"></script>
     <link rel="stylesheet" type="text/css" href="css/common.css" />
     <link rel="stylesheet" type="text/css" href="css/home.css" />
@@ -15,7 +17,7 @@
             <p>
                 <label for="file_csv" class="input_file">
                     Select CSV...
-                    <input type="file" id="file_csv" name="file_csv" required style="display:none;" />
+                    <input type="file" id="file_csv" name="file_csv" style="display:none;" />
                 </label>&nbsp;
                 <input id="path_csv" placeholder="No Selected File" disabled="disabled" class="path_file" />
             </p>
