--- a/GUI/public/statistic.html
+++ b/GUI/public/statistic.html
@@ -5,6 +5,7 @@
     <title>TRAiL</title>
     <script src="js/d3/d3.min.js"></script>
     <script src="session_data.js"></script>
+    <script src="js/common.js"></script>
     <script src="js/struct.js"></script>
     <script src="js/dialog.js"></script>
     <script src="js/client.js"></script>
