Rename and refactoring

--- a/GUI/public/graphic.html
+++ b/GUI/public/graphic.html
@@ -8,15 +8,15 @@
     <script src="js/common.js"></script>
     <script src="js/struct.js"></script>
     <script src="js/dialog.js"></script>
-    <script src="js/client.js"></script>
-    <script src="js/PageGraphic.js"></script>
+    <script src="js/graph.js"></script>
+    <script src="js/graphic.js"></script>
     <script src="js/BarController.js"></script>
     <script src="js/Histogram.js"></script>
     <script src="js/BarGraph.js"></script>
     <script src="js/LineGraph.js"></script>
     <script src="js/Matrix.js"></script>
     <link rel="stylesheet" type="text/css" href="css/common.css" />
-    <link rel="stylesheet" type="text/css" href="css/client.css" />
+    <link rel="stylesheet" type="text/css" href="css/graph.css" />
 </head>
 <body>
     <h1>Graphic Page</h1>
