--- a/GUI/public/home.html
+++ b/GUI/public/home.html
@@ -13,28 +13,32 @@
     <h1>TRAiL Home</h1>
     <div class="main">
         <form method="post" action="/upload" enctype="multipart/form-data">
-            <p>1. Select CSV File which you want to analize.</p>
-            <p>
-                <label for="file_csv" class="input_file">
-                    Select CSV...
-                    <input type="file" id="file_csv" name="file_csv" style="display:none;" />
-                </label>&nbsp;
-                <input id="path_csv" placeholder="No Selected File" disabled="disabled" class="path_file" />
-            </p>
-            <br>
-            <p>2. Click Button which you want to view.</p>
-            <p>
-                <input type="submit" class="button_page" id="submit_statistic_page" value="Statistic Page" formaction="/upload?url_next=/statistic.html" />
-                <input type="submit" class="button_page" id="submit_graphic_page" value="Graphic Page" formaction="/upload?url_next=/graphic.html" />
-            </p>
+            <div style="margin: 16px">
+                <p>1. Select CSV File which you want to analize.</p>
+                <p style="margin: 8px">
+                    <label for="file_csv" class="input_file">
+                        Select CSV...
+                        <input type="file" id="file_csv" name="file_csv" style="display:none;" />
+                    </label>&nbsp;
+                    <input id="path_csv" placeholder="No Selected File" disabled="disabled" class="path_file" />
+                </p>
+            </div>
+            <div style="margin: 16px">
+                <p>2. Click Button which you want to view.</p>
+                <p style="margin: 8px">
+                    <input type="submit" class="button_page" id="submit_statistic_page" value="Statistic Page" formaction="/upload?url_next=/statistic.html" />
+                    <input type="submit" class="button_page" id="submit_graphic_page" value="Graphic Page" formaction="/upload?url_next=/graphic.html" />
+                </p>
+            </div>
         </form>
-        <br>
-        <form method="post" id="form_clear" action="/clear">
-            <p>* If you want clear selection of CSV file, Click button below</p>
-            <p>
-                <input type="button" class="button_clear" value="Clear Selection" onClick="ClearSelection()" />
-            </p>
-        </form>
+        <div style="margin: 48px 16px 16px 16px">
+            <form method="post" id="form_clear" action="/clear">
+                <p>* If you want clear selection of CSV file, Click button below</p>
+                <p style="margin: 8px">
+                    <input type="button" class="button_clear" value="Clear Selection" onClick="ClearSelection()" />
+                </p>
+            </form>
+        </div>
     </div>
 </body>
 </html>
