--- a/GUI/public/statistic.html
+++ b/GUI/public/statistic.html
@@ -8,14 +8,14 @@
     <script src="js/common.js"></script>
     <script src="js/struct.js"></script>
     <script src="js/dialog.js"></script>
-    <script src="js/client.js"></script>
-    <script src="js/PageStatistic.js"></script>
+    <script src="js/graph.js"></script>
+    <script src="js/statistic.js"></script>
     <script src="js/BarController.js"></script>
     <script src="js/Histogram.js"></script>
     <script src="js/BoxGraph.js"></script>
     <script src="js/BarGraph.js"></script>
     <link rel="stylesheet" type="text/css" href="css/common.css" />
-    <link rel="stylesheet" type="text/css" href="css/client.css" />
+    <link rel="stylesheet" type="text/css" href="css/graph.css" />
 </head>
 <body>
     <h1>Statistic Page</h1>
