Add File Summary

--- a/GUI/public/statistic.html
+++ b/GUI/public/statistic.html
@@ -29,7 +29,13 @@
             </label>&nbsp;
             <input id="path_csv" placeholder="No Selected File" disabled="disabled" class="path_file" />
         </form>
-        <div id="controller"></div>
+        <table>
+            <tr><td>
+                <div id="controller"></div>
+            </td><td>
+                <div id="file_summary"></div>
+            </td></tr>
+        </table>
         <table border="5" width="100%" cellspacing=0>
             <tr>
                 <td rowspan=3 width="1000px" height="700px">
