--- a/GUI/public/home.html
+++ b/GUI/public/home.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="utf-8">
     <title>TRAiL</title>
@@ -9,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/common.css" />
     <link rel="stylesheet" type="text/css" href="css/home.css" />
 </head>
+
 <body>
     <h1>TRAiL Home</h1>
     <div class="main">
@@ -26,8 +28,10 @@
             <div style="margin: 16px">
                 <p>2. Click Button which you want to view.</p>
                 <p style="margin: 8px">
-                    <input type="submit" class="button_page" id="submit_statistic_page" value="Statistic Page" formaction="/upload?url_next=/statistic.html" />
-                    <input type="submit" class="button_page" id="submit_graphic_page" value="Graphic Page" formaction="/upload?url_next=/graphic.html" />
+                    <input type="submit" class="button_page" id="submit_statistic_page" value="Statistic Page" formaction="/upload?url_next=/statistic.html"
+                    />
+                    <input type="submit" class="button_page" id="submit_graphic_page" value="Graphic Page" formaction="/upload?url_next=/graphic.html"
+                    />
                 </p>
             </div>
         </form>
@@ -41,4 +45,5 @@
         </div>
     </div>
 </body>
+
 </html>
